[tool.poetry]
name = "sqlinject"
version = "0.1.0"
description = ""
authors = ["rikyiso01 <riky.isola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
mysql = "^0.0.3"
pytest = "^7.1.3"
httpx = "^0.23.0"
pytest-asyncio = "^0.20.1"
pytest-lazy-fixture = "^0.6.3"
radon = "^5.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
